# kaldav_esp32

./: .gitlab-ci.yml  Cargo.toml  README.md
.github/workflows/: ci.yml
derive/: Cargo.toml
derive/src/: lib.rs
examples/: list_events.rs
src/: caldav.rs  calendar.rs  client.rs  event.rs  home.rs  lib.rs  object.rs  principal.rs  result.rs
