[package]
name = "caldav"
version = "0.1.0"
authors = ["Sanpi <sanpi@homecomputing.fr>"]
edition = "2021"

[dependencies]
ical = "0.8"
sxd-document = "0.3"
sxd-xpath = "0.4"
thiserror = "1.0"
url = "2.0"

[dependencies.chrono]
version = "0.4"
default-features = false
features = ["clock", "std"]

[dependencies.attohttpc]
version = "0.26"
features = ["basic-auth"]

[dev-dependencies]
env_logger = "0.10"
log = "0.4"

[dev-dependencies.clap]
version = "4.0"
features = ["derive"]
