[workspace]
members = [".", "derive"]

[package]
name = "kaldav"
version = "0.3.0"
authors = ["Sanpi <sanpi@homecomputing.fr>"]
edition = "2021"
description = "Caldav client"
license = "MIT"

[lib]
harness = false

[dependencies]
ikal = "0.3"
sxd-document = "0.3"
sxd-xpath = "0.4"
thiserror = "2.0"
esp-idf-svc = "0.49"
embedded-svc = "0.28.0"
base64 = "0.22"

[dependencies.kaldav-derive]
version = "0.2"
path = "derive"

[dependencies.chrono]
version = "0.4"
default-features = false
features = ["clock", "std"]

[dev-dependencies]
env_logger = "0.11"
log = "0.4"
httpmock = "0.7.0-rc.1"

[dev-dependencies.clap]
version = "4.0"
features = ["derive"]
