[package]
name = "kaldav-derive"
version = "0.1.0"
authors = ["Sanpi <sanpi@homecomputing.fr>"]
edition = "2021"
description = "Proc macro for kaldav crate"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.26"
quote = "1.0"

[dependencies.syn]
version = "2.0"
features = ["extra-traits"]
